Adding sctid bulk endpoints
